# monodepth-rs

./: Cargo.toml  README.md  predict.sh  predict_monodepth.sh  predict_semseg.sh
src/: main.rs  monodepth.rs  semseg.rs
