[package]
name = "monodepth-rs"
version = "0.1.0"
authors = ["Alex Rozgo <alex.rozgo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = {version = "0.29", default-features = false, features = ["opencv-32"]}
tch = "0.1.3"
num-traits = "0.2"
